// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a snapshot 1`] = `
<div
  className="App"
>
  <div
    className="card"
    style={
      Object {
        "margin": "auto",
        "width": "300px",
      }
    }
  >
    <div
      className="card-body"
      style={
        Object {
          "textAlign": "left",
        }
      }
    >
      <img
        alt="Jack Wright Profile Picture"
        className="rounded-circle img-thumbnail"
        src="pfp.jpg"
        width="50px"
      />
      <div
        className="card-title h5"
        style={
          Object {
            "display": "inline",
          }
        }
      >
         Jack Wright
      </div>
      <p
        className="card-text"
      >
        Software development student based in NC.
      </p>
    </div>
  </div>
</div>
`;

exports[`renders a snapshot of the github card 1`] = `
<div
  className="card"
  style={
    Object {
      "margin": "auto",
      "width": "300px",
    }
  }
>
  <div
    className="card-body"
    style={
      Object {
        "textAlign": "left",
      }
    }
  >
    <img
      alt="Jack Wright Profile Picture"
      className="rounded-circle img-thumbnail"
      src="pfp.jpg"
      width="50px"
    />
    <div
      className="card-title h5"
      style={
        Object {
          "display": "inline",
        }
      }
    >
       Jack Wright
    </div>
    <p
      className="card-text"
    >
      Software development student based in NC.
    </p>
  </div>
</div>
`;
